# keewee

./: .gitignore  README.md  pyproject.toml  setup.py
keewee/: __init__.py
keewee/src/: keewee.py
keewee/test/: test_class_usage.py  test_dataclass_usage.py
src/: __init__.py  keewee.py  keewee_repo.py
src/keewee/: keewee.py
src/keewee/monkey/: keewee.config.json  monkey_patch.py  some_app.py
src/monkey/: keewee.json  monkey_patch.py
tests/: __init__.py  test_class_usage.py  test_closure.py  test_dataclass_usage.py  test_mode_list.py  test_modes.py  test_normal_variable.py
