[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keewee"
version = "0.0.13"
authors = [
    { name = "Erik J Kostic" }
]
description = "Useful descriptor for shadow stat collections"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eineruntervielen/keewee"
